--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,4 +233,5 @@
     <string name="excluir">Excluir</string>
     <string name="nova_miniatura">Nova Miniatura</string>
     <string name="alterar_miniatura">Alterar Miniatura</string>
+    <string name="na_embaladao">Embalagem Original</string>
 </resources>
