Entrega 4 Final - Ordem Alfabetica

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -56,4 +56,5 @@
     <string name="nova_miniatura">Nova Miniatura</string>
     <string name="alterar_miniatura">Alterar Miniatura</string>
     <string name="na_embaladao">Embalagem Original</string>
+    <string name="sort">Ordem</string>
 </resources>
